--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongoose": "^6.3.0",
-    "node-sass": "^7.0.1"
+    "node-sass": "^7.0.1",
+    "prop-types": "^15.8.1"
   },
   "devDependencies": {
     "concurrently": "^7.1.0",
